--- a/01_NLP/01_Intro_to_SpaCy.ipynb
+++ b/01_NLP/01_Intro_to_SpaCy.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "NhZDAvmY9Jx7"
+   },
    "source": [
     "# Intro to SPACY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "kGxPvJ3c9Jx8"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd    \n",
@@ -26,8 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 242
+    },
+    "colab_type": "code",
+    "id": "O0690ZAo9Jx_",
+    "outputId": "394a45c9-7874-4ef0-cebf-a1630b0e47b4"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -60,8 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "dqTcHFjj9JyE",
+    "outputId": "92035291-6e01-491b-91b7-ad54eb4988be"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -79,8 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 242
+    },
+    "colab_type": "code",
+    "id": "TZt3atJC9JyH",
+    "outputId": "e7cae406-8b6e-4ec6-9111-7dbeafba2baa"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -110,8 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 258
+    },
+    "colab_type": "code",
+    "id": "D6uCZ8Vj9JyK",
+    "outputId": "a956f718-5fd7-45d5-e550-946bf28f14f2"
+   },
    "outputs": [
     {
      "data": {
@@ -237,8 +276,10 @@
        "6     .       .  PUNCT    .   punct     .     False    False"
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
+     "execution_count": 6,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -257,7 +298,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "w19d-75t9JyN"
+   },
    "source": [
     "## Parsing tree visualization\n",
     "\n",
@@ -266,13 +310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 334
+    },
+    "colab_type": "code",
+    "id": "Dq1HwsYy9JyO",
+    "outputId": "85d2b825-cf1c-47b2-9b2e-1c7ca274ecfc"
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" id=\"0\" class=\"displacy\" width=\"750\" height=\"312.0\" style=\"max-width: none; height: 312.0px; color: #000000; background: #ffffff; font-family: Arial\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" id=\"118-0\" class=\"displacy\" width=\"750\" height=\"312.0\" style=\"max-width: none; height: 312.0px; color: #000000; background: #ffffff; font-family: Arial\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"222.0\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">This</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">DET</tspan>\n",
@@ -294,25 +346,25 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0-0\" stroke-width=\"2px\" d=\"M70,177.0 C70,89.5 220.0,89.5 220.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-118-0-0\" stroke-width=\"2px\" d=\"M70,177.0 C70,89.5 220.0,89.5 220.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0-0\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-118-0-0\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M70,179.0 L62,167.0 78,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0-1\" stroke-width=\"2px\" d=\"M420,177.0 C420,89.5 570.0,89.5 570.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-118-0-1\" stroke-width=\"2px\" d=\"M420,177.0 C420,89.5 570.0,89.5 570.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0-1\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">det</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-118-0-1\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">det</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M420,179.0 L412,167.0 428,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0-2\" stroke-width=\"2px\" d=\"M245,177.0 C245,2.0 575.0,2.0 575.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-118-0-2\" stroke-width=\"2px\" d=\"M245,177.0 C245,2.0 575.0,2.0 575.0,177.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0-2\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">attr</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-118-0-2\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">attr</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M575.0,179.0 L583.0,167.0 567.0,167.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -322,7 +374,9 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "display_data"
     }
    ],
@@ -335,15 +389,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "_Xiln_Uk9JyR"
+   },
    "source": [
     "## Chunks\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 86
+    },
+    "colab_type": "code",
+    "id": "kdqhA98P9JyS",
+    "outputId": "ae8b6773-b2c2-4381-b56a-4c3be5bf8ecc"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -366,8 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "2nZmlV0e9JyW",
+    "outputId": "437eda73-245d-4be0-a295-23e249f83379"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -385,15 +458,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "Bh9QevZO9JyZ"
+   },
    "source": [
     "## Name entities recognition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 69
+    },
+    "colab_type": "code",
+    "id": "CBaxH0QD9JyZ",
+    "outputId": "cc98959f-f562-495e-8f2d-37f086238f4a"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,8 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 52
+    },
+    "colab_type": "code",
+    "id": "I0cu0_ry9Jyc",
+    "outputId": "21711459-ca73-4c12-9f19-c18af0ce4510"
+   },
    "outputs": [
     {
      "data": {
@@ -442,7 +534,9 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "display_data"
     }
    ],
@@ -454,8 +548,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 52
+    },
+    "colab_type": "code",
+    "id": "rAxn1mq59Jye",
+    "outputId": "8472da4e-aa8a-4f76-a12f-c2848a6be5a7"
+   },
    "outputs": [
     {
      "data": {
@@ -481,7 +583,9 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "display_data"
     }
    ],
@@ -493,14 +597,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "F62lLn5r9Jyh"
+   },
    "source": [
     "## "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "gGWg0DVQ9Jyi"
+   },
    "source": [
     "# Other languages\n",
     "\n",
@@ -538,7 +648,54 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 262
+    },
+    "colab_type": "code",
+    "id": "2An7cLYK9a4J",
+    "outputId": "e031287b-c026-45fe-bfde-6e5a572b12d6"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting es_core_news_sm==2.0.0 from https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-2.0.0/es_core_news_sm-2.0.0.tar.gz#egg=es_core_news_sm==2.0.0\n",
+      "\u001b[?25l  Downloading https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-2.0.0/es_core_news_sm-2.0.0.tar.gz (36.7MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 36.7MB 63.9MB/s \n",
+      "\u001b[?25hInstalling collected packages: es-core-news-sm\n",
+      "  Running setup.py install for es-core-news-sm ... \u001b[?25ldone\n",
+      "\u001b[?25hSuccessfully installed es-core-news-sm-2.0.0\n",
+      "\n",
+      "\u001b[93m    Linking successful\u001b[0m\n",
+      "    /usr/local/lib/python3.6/dist-packages/es_core_news_sm -->\n",
+      "    /usr/local/lib/python3.6/dist-packages/spacy/data/es\n",
+      "\n",
+      "    You can now load the model via spacy.load('es')\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install spanish models in colab\n",
+    "\n",
+    "! python -m spacy download es"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 288
+    },
+    "colab_type": "code",
+    "id": "hrEhbaS39Jyi",
+    "outputId": "b2b8793f-46ae-4bb2-c8fe-aef8400ba489"
+   },
    "outputs": [
     {
      "data": {
@@ -667,8 +824,10 @@
        "7        .      .  PUNCT   punct      .     False    False"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
+     "execution_count": 15,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -690,8 +849,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "x3SDdbCV9Jyn",
+    "outputId": "f8597b26-2812-4bd3-d06d-a20f04d7dd80"
+   },
    "outputs": [
     {
      "data": {
@@ -699,8 +866,10 @@
        "['Hola', 'Mundo', '.', 'Aqui', '2', 'frase', '.']"
       ]
      },
-     "execution_count": 15,
-     "metadata": {},
+     "execution_count": 16,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -710,17 +879,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "1PqynvDC9Jyr"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "01_Intro_to_SpaCy.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:tm]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-tm-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -732,9 +911,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
