--- a/04_RNN/sentiment_model/00_data_preprocesing.ipynb
+++ b/04_RNN/sentiment_model/00_data_preprocesing.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "o2he7-5q5QrY"
+   },
    "source": [
     "# Data preprocessing\n",
     "    - Download data to the server\n",
@@ -12,22 +15,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "hJGrMLeu5QrZ"
+   },
    "source": [
-    "## Download data to the server\n",
-    "\n",
-    "### Command line in the server\n",
-    "    Path to data:\n",
-    "        cd /home/ubuntu/data/training/text/sentiment\n",
-    "    Download dataset: \n",
-    "        wget http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
-    "    Uncompress it:\n",
-    "        tar -zxvf aclImdb_v1.tar.gz"
+    "## Download data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "iY_OuVXNBJ_H"
+   },
+   "outputs": [],
+   "source": [
+    "! wget http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+    "  \n",
+    "! tar -zxvf aclImdb_v1.tar.gz\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "dJS8yQEl5Qra"
+   },
    "source": [
     "## Convert text to sequences\n",
     "    - List of all text files\n",
@@ -39,29 +56,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "xyTocxHC5Qra"
+   },
    "outputs": [],
    "source": [
     "#Imports and paths\n",
-    "from __future__ import print_function\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "# GPU path\n",
-    "#data_path='/home/ubuntu/data/training/text/sentiment/aclImdb/'\n",
-    "\n",
-    "data_path='../../data/aclImdb/'\n"
+    "data_path='./aclImdb/'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "k-4wDEhr5Qre"
+   },
    "outputs": [],
    "source": [
     "# Generator of list of files in a folder and subfolders\n",
-    "import os\n",
     "import shutil\n",
     "import fnmatch\n",
     "\n",
@@ -82,8 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "uA5Ga0sF5Qrg"
+   },
    "outputs": [],
    "source": [
     "def read_sentences(path):\n",
@@ -100,8 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "u6kwqY_T5Qrj"
+   },
    "outputs": [],
    "source": [
     "print(read_sentences(data_path+'train/neg/')[0:2])"
@@ -109,10 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "pY8xBeG45Qrl"
+   },
    "outputs": [],
    "source": [
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "  \n",
     "def tokenize(sentences):\n",
     "    from nltk import word_tokenize\n",
     "    print( 'Tokenizing...',)\n",
@@ -128,8 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "zYiJyQWt5Qro"
+   },
    "outputs": [],
    "source": [
     "sentences_trn_pos = tokenize(read_sentences(data_path+'train/pos/'))\n",
@@ -139,8 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "cXcPDpU_5Qrq"
+   },
    "outputs": [],
    "source": [
     "#create the dictionary to conver words to numbers. Order it with most frequent words first\n",
@@ -183,8 +227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "fqivLbhU5Qrs"
+   },
    "outputs": [],
    "source": [
     "# \n",
@@ -201,8 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "-S3J0wb55Qrw"
+   },
    "outputs": [],
    "source": [
     "# Create train and test data\n",
@@ -218,8 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "FcoY6-0_5Qr0"
+   },
    "outputs": [],
    "source": [
     "#Read test sentences and generate target y\n",
@@ -237,7 +293,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "O99lZgi65Qr2"
+   },
    "source": [
     "## Configure sequences for a RNN model\n",
     "    - Remove words with low frequency\n",
@@ -246,8 +305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Por3dXf15Qr2"
+   },
    "outputs": [],
    "source": [
     "#Median length of sentences\n",
@@ -256,8 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "kWbMdmlG5Qr4"
+   },
    "outputs": [],
    "source": [
     "max_features = 50000 # Number of most frequent words selected. the less frequent recode to 0\n",
@@ -266,8 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "XFKxGGZE5Qr7"
+   },
    "outputs": [],
    "source": [
     "#Select the most frequent max_features, recode others using 0\n",
@@ -284,17 +355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "zR3KslKe5Qr8"
+   },
    "outputs": [],
    "source": [
-    "from tensorflow.contrib.keras import preprocessing\n",
+    "#from tensorflow.keras import preprocessing\n",
+    "import tensorflow as tf\n",
     "\n",
     "# Cut or complete the sentences to length = maxlen\n",
     "print(\"Pad sequences (samples x time)\")\n",
     "\n",
-    "X_train = preprocessing.sequence.pad_sequences(X_train, maxlen=maxlen)\n",
-    "X_test = preprocessing.sequence.pad_sequences(X_test, maxlen=maxlen)\n",
+    "X_train = tf.keras.preprocessing.sequence.pad_sequences(X_train, maxlen=maxlen)\n",
+    "X_test = tf.keras.preprocessing.sequence.pad_sequences(X_test, maxlen=maxlen)\n",
     "\n",
     "print('X_train shape:', X_train.shape)\n",
     "print('X_test shape:', X_test.shape)\n",
@@ -304,8 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "mebNiv3P5Qr_"
+   },
    "outputs": [],
    "source": [
     "# Shuffle data\n",
@@ -316,44 +396,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "yTumJJsIJDPJ"
+   },
    "outputs": [],
    "source": [
-    "# Export train and test data\n",
-    "np.save(data_path + 'X_train', X_train)\n",
-    "np.save(data_path + 'y_train', y_train)\n",
-    "np.save(data_path + 'X_test',  X_test)\n",
-    "np.save(data_path + 'y_test',  y_test)\n"
+    "# Link drive to share files beetwen sessions\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "NNTP07rI5QsB"
+   },
+   "outputs": [],
+   "source": [
+    "# Export train and test data\n",
+    "\n",
+    "save_path= './gdrive/My Drive/text_mining'\n",
+    "if not os.path.exists(save_path):\n",
+    "    os.makedirs(save_path)\n",
+    "\n",
+    "\n",
+    "np.save(os.path.join(save_path, 'X_train'), X_train)\n",
+    "np.save(os.path.join(save_path, 'y_train'), y_train)\n",
+    "np.save(os.path.join(save_path, 'X_test'),  X_test)\n",
+    "np.save(os.path.join(save_path, 'y_test'),  y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Klc1yHZu5QsD"
+   },
    "outputs": [],
    "source": [
     "# Export worddict\n",
     "import pickle\n",
     "\n",
-    "with open(data_path + 'worddict.pickle', 'wb') as pfile:\n",
+    "with open(os.path.join(save_path, 'worddict.pickle'), 'wb') as pfile:\n",
     "    pickle.dump(worddict, pfile)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "bhs4e-gG5QsF"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
+  "colab": {
+   "name": "00_data_preprocesing.ipynb",
+   "provenance": [],
+   "toc_visible": true,
+   "version": "0.3.2"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:tm]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-tm-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,9 +483,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
