--- a/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
+++ b/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
@@ -3,13 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "nlMsYM6dBe3u",
+    "outputId": "502758e8-b517-4253-d5e7-61d409695bc9"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn version: 0.19.1\n"
+      "Sklearn version: 0.20.3\n"
      ]
     }
    ],
@@ -24,7 +32,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "BKklYgajBe30"
+   },
    "source": [
     "# The data\n",
     "\n",
@@ -34,8 +45,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 69
+    },
+    "colab_type": "code",
+    "id": "gqLeJ7OCBe31",
+    "outputId": "d4ae748f-45c8-41b9-9be1-463376a7eeaf"
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -43,7 +70,9 @@
       ]
      },
      "execution_count": 2,
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -62,7 +91,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 466
+    },
+    "colab_type": "code",
+    "id": "518-RutVBe34",
+    "outputId": "cc4f98d4-700f-48dd-8377-5af8328f1dce"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,7 +144,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "UrkN_V9VBe36",
+    "outputId": "521f24a0-131c-47bc-e16f-5cbf362cca3d"
+   },
    "outputs": [
     {
      "data": {
@@ -116,7 +161,9 @@
       ]
      },
      "execution_count": 4,
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -134,7 +181,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 898
+    },
+    "colab_type": "code",
+    "id": "UHc0H2KABe39",
+    "outputId": "d8fc6c8a-2206-43ba-8fa1-d04c883f4c65"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +257,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "6RgIXWcmBe3_",
+    "outputId": "e0c43f13-5009-45ad-9b15-5a674214d30a"
+   },
    "outputs": [
     {
      "data": {
@@ -211,7 +274,9 @@
       ]
      },
      "execution_count": 6,
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -227,62 +292,70 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 898
+    },
+    "colab_type": "code",
+    "id": "NGFAGiW5Be4C",
+    "outputId": "4380f453-a8f9-4e5a-905d-ffecce84ff76"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1445)\t0.09984961017366438\n",
-      "  (0, 2550)\t0.09208756192014825\n",
-      "  (0, 2014)\t0.10905059471954383\n",
-      "  (0, 4869)\t0.11240915977454444\n",
-      "  (0, 4299)\t0.17223237883101852\n",
-      "  (0, 3273)\t0.1894979846175662\n",
-      "  (0, 357)\t0.19614730458851817\n",
-      "  (0, 3276)\t0.23935810161052842\n",
-      "  (0, 4744)\t0.2426971720743241\n",
-      "  (0, 1090)\t0.18536764690499014\n",
-      "  (0, 2251)\t0.2815174602044267\n",
-      "  (0, 4520)\t0.23935810161052842\n",
-      "  (0, 1795)\t0.32667393651341364\n",
-      "  (0, 2237)\t0.2178827886891891\n",
-      "  (0, 1865)\t0.1823562906613318\n",
-      "  (0, 2643)\t0.09443126584369482\n",
-      "  (0, 1094)\t0.25039793047338804\n",
-      "  (0, 2197)\t0.22599179670408007\n",
+      "  (0, 4869)\t0.11240915977454445\n",
+      "  (0, 4744)\t0.24269717207432415\n",
+      "  (0, 4522)\t0.12653363760378739\n",
+      "  (0, 4520)\t0.23935810161052845\n",
+      "  (0, 4299)\t0.17223237883101855\n",
+      "  (0, 3867)\t0.16560834723130238\n",
       "  (0, 3385)\t0.27295430367067186\n",
-      "  (0, 1543)\t0.16378061599510793\n",
-      "  (0, 3867)\t0.16560834723130236\n",
-      "  (0, 1123)\t0.1576109272623592\n",
-      "  (0, 2058)\t0.14480748228447815\n",
-      "  (0, 4522)\t0.12653363760378736\n",
-      "  (0, 238)\t0.17006982914503366\n",
+      "  (0, 3276)\t0.23935810161052845\n",
+      "  (0, 3273)\t0.18949798461756623\n",
       "  (0, 2866)\t0.1903802097234869\n",
+      "  (0, 2643)\t0.09443126584369484\n",
+      "  (0, 2550)\t0.09208756192014826\n",
+      "  (0, 2251)\t0.28151746020442675\n",
+      "  (0, 2237)\t0.21788278868918912\n",
+      "  (0, 2197)\t0.2259917967040801\n",
+      "  (0, 2058)\t0.14480748228447818\n",
+      "  (0, 2014)\t0.10905059471954384\n",
+      "  (0, 1865)\t0.18235629066133183\n",
+      "  (0, 1795)\t0.3266739365134137\n",
+      "  (0, 1543)\t0.16378061599510796\n",
+      "  (0, 1445)\t0.0998496101736644\n",
+      "  (0, 1123)\t0.15761092726235923\n",
+      "  (0, 1094)\t0.2503979304733881\n",
+      "  (0, 1090)\t0.18536764690499016\n",
+      "  (0, 357)\t0.1961473045885182\n",
+      "  (0, 238)\t0.17006982914503369\n",
       "  (232, 0)\t0.1626733015721039\n",
       "  (272, 0)\t0.03960458829975349\n",
-      "  (282, 0)\t0.08301434712372262\n",
-      "  (400, 0)\t0.005277364589626779\n",
-      "  (433, 0)\t0.005964993735391251\n",
+      "  (282, 0)\t0.08301434712372259\n",
+      "  (400, 0)\t0.0052773645896267785\n",
+      "  (433, 0)\t0.0059649937353912505\n",
       "  (581, 0)\t0.150704657006369\n",
       "  (588, 0)\t0.1542968331053262\n",
       "  (766, 0)\t0.1269568469979588\n",
-      "  (768, 0)\t0.011707829878397238\n",
+      "  (768, 0)\t0.011707829878397236\n",
       "  (837, 0)\t0.334685959895095\n",
       "  (844, 0)\t0.20716739670250434\n",
       "  (859, 0)\t0.21650613403417462\n",
-      "  (880, 0)\t0.01335023629162414\n",
+      "  (880, 0)\t0.013350236291624146\n",
       "  (1030, 0)\t0.27874171459307817\n",
-      "  (1056, 0)\t0.21261226227802443\n",
-      "  (1057, 0)\t0.13986552773816452\n",
+      "  (1056, 0)\t0.21261226227802438\n",
+      "  (1057, 0)\t0.1398655277381645\n",
       "  (1263, 0)\t0.08891073557106413\n",
       "  (1475, 0)\t0.2751482241616676\n",
-      "  (1665, 0)\t0.2238605766396589\n",
-      "  (1795, 0)\t0.09117991042239235\n",
-      "  (1802, 0)\t0.016531921225093872\n",
-      "  (1833, 0)\t0.11551299395013806\n",
+      "  (1665, 0)\t0.223860576639659\n",
+      "  (1795, 0)\t0.09117991042239236\n",
+      "  (1802, 0)\t0.016531921225093876\n",
+      "  (1833, 0)\t0.11551299395013807\n",
       "  (1890, 0)\t0.007961631219200998\n",
-      "  (2069, 0)\t0.10844175004957458\n",
+      "  (2069, 0)\t0.1084417500495746\n",
       "  (2144, 0)\t0.11498345738389044\n"
      ]
     }
@@ -294,15 +367,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "aJ-r-0RJBe4E"
+   },
    "source": [
     "## First basic model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "q20xmYliBe4F"
+   },
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -314,7 +394,15 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "-kR80LzXBe4H",
+    "outputId": "2694a203-e683-4e6c-d5ad-4de397f3a428"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -349,7 +437,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 52
+    },
+    "colab_type": "code",
+    "id": "jBMMuNlQBe4K",
+    "outputId": "200517f4-585f-489f-84b9-5b5a7568bac2"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -381,7 +477,15 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "rDMPsl1ZBe4N",
+    "outputId": "cbaca75c-1d87-4b64-feea-8c1181ab9cb4"
+   },
    "outputs": [
     {
      "data": {
@@ -390,7 +494,9 @@
       ]
      },
      "execution_count": 11,
-     "metadata": {},
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
@@ -400,18 +506,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "n2jzIzbhBe4P"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
+  "colab": {
+   "collapsed_sections": [],
+   "name": "03_sklearn_text_classification_SOLVED.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:tm]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-tm-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -423,9 +538,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
