--- a/03_word_representations_gensim/01_gensim_word2vect.ipynb
+++ b/03_word_representations_gensim/01_gensim_word2vect.ipynb
@@ -73,6 +73,9 @@
    "outputs": [],
    "source": [
     "# Load a more big corpus\n",
+    "import nltk\n",
+    "nltk.download('brown')\n",
+    "\n",
     "from nltk.corpus import brown\n",
     "\n",
     "print('Corpus sentences len:', len(brown.sents()))\n",
