--- a/01_NLP/01_Intro_to_SpaCy.ipynb
+++ b/01_NLP/01_Intro_to_SpaCy.ipynb
@@ -897,7 +897,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -911,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
