--- a/04_RNN/sentiment_model/02_Model2_SimpleLSTM.ipynb
+++ b/04_RNN/sentiment_model/02_Model2_SimpleLSTM.ipynb
@@ -20,16 +20,16 @@
    },
    "outputs": [],
    "source": [
-    "# Configure to use tensorboard in colab\n",
+    "# Use tensorflow 2.0\n",
     "\n",
     "#CPU\n",
-    "#!pip install -q tensorflow==2.0.0-alpha0\n",
+    "#!pip install -q tensorflow==2.0.0\n",
     "\n",
     "#GPU\n",
-    "!pip install -q tensorflow-gpu==2.0.0-alpha0\n",
+    "!pip install -q tensorflow-gpu==2.0.0\n",
     "\n",
     "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard.notebook"
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -55,6 +55,7 @@
     "# Header\n",
     "from __future__ import print_function\n",
     "\n",
+    "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "print('Tensorflow version: ', tf.__version__)\n",
@@ -235,6 +236,8 @@
    },
    "outputs": [],
    "source": [
+    "%reload_ext tensorboard\n",
+    "\n",
     "# Start tensorboard\n",
     "%tensorboard --logdir ./tensorboard/sentiment"
    ]
@@ -434,7 +437,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
