--- a/04_RNN/sentiment_model/03_Model3_BidirectionalLSTM.ipynb
+++ b/04_RNN/sentiment_model/03_Model3_BidirectionalLSTM.ipynb
@@ -24,13 +24,13 @@
     "# Configure to use tensorboard in colab\n",
     "\n",
     "#CPU\n",
-    "#!pip install -q tensorflow==2.0.0-alpha0\n",
+    "#!pip install -q tensorflow==2.0.0\n",
     "\n",
     "#GPU\n",
-    "!pip install -q tensorflow-gpu==2.0.0-alpha0\n",
+    "!pip install -q tensorflow-gpu==2.0.0\n",
     "\n",
     "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard.notebook"
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -176,13 +176,21 @@
     "# LAYER 2: Create embedings\n",
     "embeds = tf.keras.layers.Embedding(max_features, dim_embedings, input_length=max_len)(seq_prev_input)\n",
     "\n",
+    "\n",
     "# LAYERS 3: RNN - bidirectional LSTM with dropout\n",
-    "forwards1  = tf.keras.layers.LSTM(num_hidden_rnn, return_sequences=False,\n",
+    "forwards1  = tf.keras.layers.LSTM(num_hidden_rnn,\n",
     "                 dropout=0.5, recurrent_dropout=0.5, name='Forward')(embeds)\n",
-    "backwards1 = tf.keras.layers.LSTM(num_hidden_rnn, return_sequences=False,\n",
+    "backwards1 = tf.keras.layers.LSTM(num_hidden_rnn,\n",
     "                 dropout=0.5, recurrent_dropout=0.5, go_backwards=True, name='Backward')(embeds)\n",
     "\n",
     "rnn_out = tf.keras.layers.concatenate([forwards1, backwards1], axis=-1, name='Forward_Backward')\n",
+    "\n",
+    "\n",
+    "#LAYERS 3: Alternative tf 2.0\n",
+    "#rnn_out  = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(num_hidden_rnn,\n",
+    "#                 dropout=0.5, recurrent_dropout=0.5, name='Forward'))(embeds)\n",
+    "\n",
+    "\n",
     "\n",
     "# LAYER 4: Dense layer to outputs - softmax activation\n",
     "output = tf.keras.layers.Dense(2, activation='softmax')(rnn_out)\n",
@@ -213,7 +221,7 @@
     "tbCallBack = tf.keras.callbacks.TensorBoard(log_dir='./tensorboard/sentiment/BidirectionalLSTM')\n",
     "#history = model_1.fit(X_train, y_train, batch_size=batch_size, epochs=10,\n",
     "#                      validation_data=(X_test, y_test), callbacks=[tbCallBack])\n",
-    "history = model_1.fit(X_train, y_train, batch_size=batch_size, epochs=10,\n",
+    "history = model_1.fit(X_train, y_train, batch_size=batch_size, epochs=5,\n",
     "                      validation_data=(X_test, y_test))\n",
     "\n",
     "# GPU execution tf 1.2: 76\n",
@@ -230,6 +238,8 @@
    },
    "outputs": [],
    "source": [
+    "%reload_ext tensorboard\n",
+    "\n",
     "# Start tensorboard\n",
     "%tensorboard --logdir ./tensorboard/sentiment"
    ]
@@ -317,7 +327,7 @@
     "\n",
     "# Load dictionary\n",
     "import pickle\n",
-    "with open(data_path + 'worddict.pickle', 'rb') as pfile:\n",
+    "with open(os.path.join(save_path,'worddict.pickle'), 'rb') as pfile:\n",
     "    worddict = pickle.load(pfile)\n",
     "\n",
     "    \n",
@@ -402,7 +412,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
