--- a/04_RNN/sentiment_model/04_Model4_Stacked_LSTM.ipynb
+++ b/04_RNN/sentiment_model/04_Model4_Stacked_LSTM.ipynb
@@ -27,13 +27,13 @@
     "# Configure to use tensorboard in colab\n",
     "\n",
     "#CPU\n",
-    "#!pip install -q tensorflow==2.0.0-alpha0\n",
+    "#!pip install -q tensorflow==2.0.0\n",
     "\n",
     "#GPU\n",
-    "!pip install -q tensorflow-gpu==2.0.0-alpha0\n",
+    "!pip install -q tensorflow-gpu==2.0.0\n",
     "\n",
     "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard.notebook"
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\n",
     "print(\"Train...\")\n",
     "tbCallBack = tf.keras.callbacks.TensorBoard(log_dir='./tensorboard/sentiment/StakedLSTM')\n",
-    "history = model_1.fit(X_train, y_train, batch_size=batch_size, epochs=10,\n",
+    "history = model_1.fit(X_train, y_train, batch_size=batch_size, epochs=5,\n",
     "                      validation_data=(X_test, y_test), callbacks=[tbCallBack])"
    ]
   },
@@ -237,6 +237,8 @@
    },
    "outputs": [],
    "source": [
+    "%reload_ext tensorboard\n",
+    "\n",
     "# Start tensorboard\n",
     "%tensorboard --logdir ./tensorboard/sentiment"
    ]
@@ -323,7 +325,7 @@
     "\n",
     "# Load dictionary\n",
     "import pickle\n",
-    "with open(data_path + 'worddict.pickle', 'rb') as pfile:\n",
+    "with open(os.path.join(save_path,'worddict.pickle'), 'rb') as pfile:\n",
     "    worddict = pickle.load(pfile)\n",
     "\n",
     "    \n",
@@ -418,7 +420,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
