--- a/04_RNN/sentiment_model/05_Model5_RNN_with_pretrained_embeddings.ipynb
+++ b/04_RNN/sentiment_model/05_Model5_RNN_with_pretrained_embeddings.ipynb
@@ -410,7 +410,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
