--- a/04_RNN/word_tagging/02_identify_tags_in_airline_database_BLSTM.ipynb
+++ b/04_RNN/word_tagging/02_identify_tags_in_airline_database_BLSTM.ipynb
@@ -29,13 +29,10 @@
     "# Configure to use tensorboard in colab\n",
     "\n",
     "#CPU\n",
-    "#!pip install -q tensorflow==2.0.0-alpha0\n",
+    "#!pip install -q tensorflow==2.0.0\n",
     "\n",
     "#GPU\n",
-    "!pip install -q tensorflow-gpu==2.0.0-alpha0\n",
-    "\n",
-    "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard.notebook"
+    "#!pip install -q tensorflow-gpu==2.0.0\n"
    ]
   },
   {
@@ -341,9 +338,12 @@
     "# Compare validation of the 3 models\n",
     "plt.rcParams['figure.figsize'] = (10, 10)\n",
     "\n",
-    "plt.plot(history1.history['val_accuracy'], label='BLSTM')\n",
-    "plt.plot(history2.history['val_accuracy'], label='Stacked LSTM')\n",
-    "plt.plot(history3.history['val_accuracy'], label='Stacked BLSTM')\n",
+    "plt.plot(history1.history['val_acc'], label='BLSTM')\n",
+    "plt.plot(history2.history['val_acc'], label='Stacked LSTM')\n",
+    "plt.plot(history3.history['val_acc'], label='Stacked BLSTM')\n",
+    "#plt.plot(history1.history['val_accuracy'], label='BLSTM') # tf 2.0\n",
+    "#plt.plot(history2.history['val_accuracy'], label='Stacked LSTM') # tf 2.0\n",
+    "#plt.plot(history3.history['val_accuracy'], label='Stacked BLSTM') # tf 2.0\n",
     "plt.legend(loc='lower right')\n",
     "plt.show()"
    ]
@@ -358,6 +358,9 @@
    },
    "outputs": [],
    "source": [
+    "# Load the TensorBoard notebook extension\n",
+    "%reload_ext tensorboard\n",
+    "\n",
     "# Start tensorboard\n",
     "%tensorboard --logdir ./tensorboard/airline"
    ]
@@ -439,10 +442,10 @@
     "out_v = io.open('vecs.tsv', 'w', encoding='utf-8')\n",
     "out_m = io.open('meta.tsv', 'w', encoding='utf-8')\n",
     "for word_num in idx2w.keys():\n",
-    "  word = idx2w[word_num]\n",
-    "  embeddings = weights[word_num]\n",
-    "  out_m.write(str(word) + \"\\n\")\n",
-    "  out_v.write('\\t'.join([str(x) for x in embeddings]) + \"\\n\")\n",
+    "    word = idx2w[word_num]\n",
+    "    embeddings = weights[word_num]\n",
+    "    out_m.write(str(word) + \"\\n\")\n",
+    "    out_v.write('\\t'.join([str(x) for x in embeddings]) + \"\\n\")\n",
     "out_v.close()\n",
     "out_m.close()\n",
     "\n"
@@ -461,12 +464,12 @@
     "# download to local\n",
     "\n",
     "try:\n",
-    "  from google.colab import files\n",
+    "    from google.colab import files\n",
     "except ImportError:\n",
-    "  pass\n",
+    "    pass\n",
     "else:\n",
-    "  files.download('vecs.tsv')\n",
-    "  files.download('meta.tsv')\n",
+    "    files.download('vecs.tsv')\n",
+    "    files.download('meta.tsv')\n",
     "\n"
    ]
   },
@@ -504,7 +507,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -518,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
